# RoboForge

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme.md  ardparser.py  comps.py  ids.py  main.py  requirements.txt  sample.ino  socks.py
examples/: Serial-example.ino  blink.ino  ir-with-led.ino  temp-led.ino
simulator/: Arduino.h  Docs.md  _time.cpp  _time.h  components.cpp  components.h  engine.cpp  engine.h  funcs.cpp  funcs.h  hserial.cpp  hserial.h  simulator.cpp  sock.cpp  sock.h
simulator/components/: ard.cpp  ard.h  base.h  breadboard.cpp  breadboard.h  bundle.h  component.cpp  component.h  irsensor.cpp  irsensor.h  led.cpp  led.h  pin.cpp  pin.h  tempsens.cpp  tempsens.h  wire.cpp  wire.h
src/: CMakeLists.txt  ardparser  ardparser.cpp  basecode.h  main.cpp  main2.cpp  main3.cpp  sample.ino
